Fix indicator not showing issue

--- a/src/1.0.2/bigslider.css
+++ b/src/1.0.2/bigslider.css
@@ -148,6 +148,7 @@
 	-ms-flex-pack: center;
 	justify-content: center;
     width: 100%;
+    z-index: 100;
 }
 
 .bigslider .indicator .dot {
